# LiteratureMiningLLM

./: .env.example  .gitignore  Agent_Workflow_README.md  RAG_Multi_Agent_Workflow.md  README.md  config.py  document_processor.py  embeddings.py  langgraph_workflow.py  main.py  pinecone_manager.py  pyproject.toml  rag_chain.py  requirements.txt  retrieval.py  t.ipynb  vector_store.py
Agents/: agent.py  config.yaml  populate_index.py  rag_tool.py  setup_pinecone_index.py  utils.py
Agents/prompts/: Schema_Designer.md
agents/: exporter_agent.py  pdf_chunking_agent.py  result_aggregator_agent.py  schema_designer_agent.py  vector_retriever_agent.py  vector_store.py
db/: chroma.sqlite3
depreciated/: t.ipynb
depreciated/agents/: vector_retriever_agent.py
lib/: chunker.py
prompts/: schema_designer_agent.py
tools/: agentic_chunker.py  db.py  rag.py
